@@ -20,7 +20,7 @@ requires "LWP::MediaTypes" => "6";
 requires "MIME::Base64" => "2.1";
 requires "MIME::QuotedPrint" => "0";
 requires "URI" => "1.10";
-requires "base" => "0";
+requires "parent" => "0";
 requires "perl" => "5.008001";
 requires "strict" => "0";
 requires "warnings" => "0";
